Save : main section 1 , 2 over

--- a/Home_page/index.html
+++ b/Home_page/index.html
@@ -16,15 +16,18 @@
     <header>
         <!-- Nav -->
         <nav>
-            <div class="container ">
+            <div>
                 <!-- navbar icon and heading  -->
-                <div class="d-flex">
-                    <div class="position-relative">
-                        <div class="box1"></div><!-- icon - 1-->
-                        <div class="box2"></div><!-- icon - 2 -->
-                    </div>
-                    <div class="heading"> <!-- for Heading -->
-                        <p class="text-primary">HEALTHY CARE</p>
+                <div>
+                    <img src="../asset/Doctor-front-image" class="img-fluid">
+                    <div class="container main-box " >
+                        <div class="position-relative">
+                            <div class="box1"></div><!-- icon - 1-->
+                            <div class="box2"></div><!-- icon - 2 -->
+                        </div>
+                        <div class="heading"> <!-- for Heading -->
+                            <p class="text-primary">HEALTHY CARE</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -32,17 +35,32 @@
     </header>
     <!-- Header end -->
     <!-- main start  -->
-    <main class="container">
+    <main>
         <!-- section for doctor image -->
-        <section> 
+        <section>
             <div class="position-relative">
-                <img src="../asset/Doctor.jpg" alt="Doctor image">
-                <div class="heading-image bg-primary">
-                   <p> MEDICAL CLINIC </p>
+                <center>
+                    <!-- <img src="../asset/Doctor.jpg" alt="Doctor image"> -->
+                    <div class="container">
+                        <div class="heading-image bg-primary">
+                            <p> MEDICAL CLINIC </p>
+                        </div>
+                        <div class="heading-sec-box bg-info">
+                            <p> LET US <strong> TAKE </strong> CARE OF YOU </p>
+                        </div>
+                    </div>
+                </center>
+            </div>
+        </section>
+        <!-- section 2 for content -->
+        <section class="container">
+            <div class="context">
+                <div class="position-relative">
+                    "
                 </div>
-                <div class="heading-sec-box bg-info">
-                    <p> LET US <strong> TAKE </strong> CARE OF YOU </p>
-                 </div>
+                <div>
+
+                </div>
             </div>
         </section>
     </main>
