--- a/Home_page/Home.html
+++ b/Home_page/Home.html
@@ -8,6 +8,7 @@
     <title>Healthy Care</title>
     <link rel="stylesheet" href="index.css"> <!-- css file link -->
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css"><!-- Bootstrap - 4 css link up -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
 <body>
@@ -35,22 +36,24 @@
     <!-- main start  -->
     <main>
         <!-- section for doctor image -->
-        <div class="position-relative">
-            <center class="position-relative">
-                <section class="position-absolute">
-                    <div>
-                        <div class="heading-image bg-primary">
-                            <p> MEDICAL CLINIC </p>
+        <section>
+            <div class="position-relative">
+                <center>
+                    <div class="position-absolute">
+                        <div>
+                            <div class="heading-image bg-primary">
+                                <p> MEDICAL CLINIC </p>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="heading-sec-box bg-info">
+                                <p> LET US <strong> TAKE </strong> CARE OF YOU </p>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <div class="heading-sec-box bg-info">
-                            <p> LET US <strong> TAKE </strong> CARE OF YOU </p>
-                        </div>
-                    </div>
-                </section>
-            </center>
-        </div>
+                </center>
+            </div>
+        </section>
         <!-- section 2 for content -->
         <section class="container position-relative">
             <div class="row">
@@ -75,11 +78,10 @@
                         </div>
                     </div>
                     <div class="card">
-                        <h4 class="card-title">Special Attention</h4>
-                        <h4 class="card-title">For <strong> COVID</strong></h4>
+                        <h4 class="card-title">Special Attention <br> For <strong> COVID</strong></h4>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="feature-img">
                                         <img src="../asset/24hours.png" alt="">
                                     </div>
@@ -87,7 +89,7 @@
                                         <p>24 hours treat</p>
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="feature-img">
                                         <img src="../asset/mobile.png" alt="">
                                     </div>
@@ -95,13 +97,25 @@
                                         <p>Mobile chat</p>
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="feature-img">
                                         <img src="../asset/wear mask.png" alt="">
                                     </div>
                                     <div class="feature-body">
-                                        <p>Wear </p>
+                                        <p>Wear Mask</p>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contact-us">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Contact Us</h5>
+                                <h6 class="card-subtitle mb-2">00 89 00 78 9878</h6>
+                                <h6 class="card-subtitle mb-2">email@gmail.com</h6>
+                                <div class="footer">
+                                    <i class="fa-solid fa-globe"> </i> WWW YOUR SITE URL
                                 </div>
                             </div>
                         </div>
@@ -109,7 +123,6 @@
                 </div>
                 <div class="col-md-4">
                     <div>
-
                     </div>
                 </div>
             </div>
