Save : all minor changes done like color

--- a/Home_page/Home.html
+++ b/Home_page/Home.html
@@ -63,38 +63,51 @@
                 </div>
                 <div class="position-relative" style="margin-top: 175px;">
                     <h4>Special Attention <br> For <strong> COVID</strong></h4>
-                    <div class="row">
+                    <div class="row mt-2">
                         <div class="col-lg-3 d-flex justify-content-center">
                             <div class="feature-img">
-                                <img src="../asset/24hours.png" style="border-radius: 50%; width: 4rem;" alt="">
+                                <img src="../asset/logo1.jpg" style="border-radius: 50%; width: 4rem;" alt="">
                             </div>
                             <div class="feature-body">
-                                <p>24 hours treat</p>
+                                <p>24 hours <br> treat</p>
                             </div>
                         </div>
                         <div class="col-lg-3 d-flex justify-content-center">
                             <div class="feature-img">
-                                <img src="../asset/mobile.png" style="border-radius: 50%; width: 4rem;" alt="">
+                                <img src="../asset/logo2.jpg" style="border-radius: 50%; width: 4rem;" alt="">
                             </div>
                             <div class="feature-body">
-                                <p>Mobile chat</p>
+                                <p>Mobile <br> chat</p>
                             </div>
                         </div>
                         <div class="col-lg-3 d-flex justify-content-center">
                             <div class="feature-img">
-                                <img src="../asset/wear mask.png" style="border-radius: 50%; width: 4rem;" alt="">
+                                <img src="../asset/l1img3.jpg" style="border-radius: 50%; width: 4rem;" alt="">
                             </div>
                             <div class="feature-body">
-                                <p>Wear Mask</p>
+                                <p>Wear <br> Mask</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="position-relative mt-5">
                     <p class="text-info">Contact Us</p>
-                    <p class="text-primary"><i class="fa-solid fa-phone"></i> 00 89 00 78 9878</p>
-                    <p class="text-primary"><i class="fa-solid fa-envelope"></i> email@gmail.com</p>
-                    <p class="text-primary"><i class="fa-solid fa-globe"> </i> WWW YOUR SITE URL</p>
+                    <a href="tel:+9199225195040">
+                        <p class="text-primary"><i class="fa-solid fa-phone"></i> +91 9925195040</p>
+                    </a>
+                    <a href="mailto:rao.info@gmail.com">
+                        <p class="text-primary"><i class="fa-solid fa-envelope"></i> rao.info@gmail.com</p>
+                    </a>
+                    <div class="logo-section" style="display: flex; align-items: center;">
+                        <a href="">
+                            <p class="text-primary"><i class="fa-solid fa-globe"> </i>https://raoinformationtechnology.com/</p>
+                        </a>
+                        <div class="d-flex ">
+                            <img src="../asset/twitter.png" alt="">
+                            <img src="../asset/instagram.png" alt="">
+                            <img src="../asset/facebook.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-sm-4 mt-1">
