Full structure clear about health care

--- a/Home_page/Home.html
+++ b/Home_page/Home.html
@@ -99,13 +99,13 @@
                         <p class="text-primary"><i class="fa-solid fa-envelope"></i> rao.info@gmail.com</p>
                     </a>
                     <div class="logo-section" style="display: flex; align-items: center;">
-                        <a href="">
-                            <p class="text-primary"><i class="fa-solid fa-globe"> </i>https://raoinformationtechnology.com/</p>
+                        <a href="https://raoinformationtechnology.com ">
+                            <p class="text-primary"><i class="fa-solid fa-globe mx-1"> </i>raoinformationtechnology.com </p>
                         </a>
                         <div class="d-flex ">
-                            <img src="../asset/twitter.png" alt="">
-                            <img src="../asset/instagram.png" alt="">
-                            <img src="../asset/facebook.png" alt="">
+                            <a href="https://twitter.com/RaoInfoTech"><img src="../asset/twitter.png"  alt="twitter image"></a>
+                            <a href="https://www.instagram.com/raoinfotechofficial/?hl=en"><img src="../asset/instagram.png" alt="instagram image"></a>
+                            <a href="https://www.facebook.com/raoinformationtechnology/"><img src="../asset/facebook.png"  alt="facebook image"></a>                            
                         </div>
                     </div>
                 </div>
