--- a/responsive-site/index.html
+++ b/responsive-site/index.html
@@ -24,20 +24,23 @@
                     <div class="main-box">
                         <div class="box1"></div><!-- icon - 1-->
                         <div class="box2"></div><!-- icon - 2 -->
-                    </div>
-                    <div class="main-box">
                         <p class="text-primary">HEALTHY CARE</p>
                     </div>
-                </div>
-                <!-- this is banner present -->
-                <div class="position-absolute">
-                    <div class="heading-image bg-primary">
-                        <p> MEDICAL CLINIC </p>
-                    </div>
-                    <div class="heading-sec-box bg-info">
-                        <p> LET US <strong> TAKE </strong> CARE OF YOU </p>
+                    <div class="main-box">
+
                     </div>
                 </div>
+                
+                    <!-- this is banner present -->
+                    <div class="position-absolute "> 
+                        <div class="heading-image bg-primary">
+                            <p> MEDICAL CLINIC </p>
+                        </div>
+                        <div class="heading-sec-box bg-info">
+                            <p> LET US <strong> TAKE </strong> CARE OF YOU </p>
+                        </div>
+                    </div>
+                
             </div>
         </nav>
     </header>
@@ -61,7 +64,7 @@
                         rem
                         eveniet nemo earum ab, aut fugiat, dolorum neque nesciunt corporis?</p>
                 </div>
-                <div class="position-relative" style="margin-top: 175px;">
+                <div class="position-relative">
                     <h4>Special Attention <br> For <strong> COVID</strong></h4>
                     <div class="row mt-2">
                         <div class="col-lg-3 d-flex justify-content-center">
@@ -100,12 +103,16 @@
                     </a>
                     <div class="logo-section" style="display: flex; align-items: center;">
                         <a href="https://raoinformationtechnology.com ">
-                            <p class="text-primary"><i class="fa-solid fa-globe mx-1"> </i>raoinformationtechnology.com </p>
+                            <p class="text-primary"><i class="fa-solid fa-globe mx-1"> </i>raoinformationtechnology.com
+                            </p>
                         </a>
                         <div class="d-flex ">
-                            <a href="https://twitter.com/RaoInfoTech"><img src="../asset/twitter.png"  alt="twitter image"></a>
-                            <a href="https://www.instagram.com/raoinfotechofficial/?hl=en"><img src="../asset/instagram.png" alt="instagram image"></a>
-                            <a href="https://www.facebook.com/raoinformationtechnology/"><img src="../asset/facebook.png"  alt="facebook image"></a>                            
+                            <a href="https://twitter.com/RaoInfoTech"><img src="../asset/twitter.png"
+                                    alt="twitter image"></a>
+                            <a href="https://www.instagram.com/raoinfotechofficial/?hl=en"><img
+                                    src="../asset/instagram.png" alt="instagram image"></a>
+                            <a href="https://www.facebook.com/raoinformationtechnology/"><img
+                                    src="../asset/facebook.png" alt="facebook image"></a>
                         </div>
                     </div>
                 </div>
