--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthy Care</title>
     <link rel="stylesheet" href="index.css"> <!-- css file link -->
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css"><!-- Bootstrap - 4 css link up -->
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css"><!-- Bootstrap - 4 css link up -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
@@ -19,7 +19,7 @@
         <nav>
             <!-- navbar icon and heading  -->
             <div class="position-relative">
-                <img src="../asset/Doctor-front-image" class="img-fluid">
+                <img src="./asset/Doctor-front-image" class="img-fluid">
                 <div class="container">
                     <div class="main-box">
                         <div class="box1"></div><!-- icon - 1-->
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-sm-8">
                 <div class="position-relative">
-                    <img src="../asset/Double-Quote.png" alt="double quote"
+                    <img src="./asset/Double-Quote.png" alt="double quote"
                         style="width:4rem;margin: 10px 0px 0px 0px;">
                     <p class="txt">ABOUT<strong>US</strong></p>
                     <p class="context">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta doloremque cum
@@ -69,7 +69,7 @@
                     <div class="row mt-2">
                         <div class="col-lg-3 d-flex justify-content-center">
                             <div class="feature-img">
-                                <img src="../asset/logo1.jpg" style="border-radius: 50%; width: 4rem;" alt="">
+                                <img src="./asset/logo1.jpg" style="border-radius: 50%; width: 4rem;" alt="">
                             </div>
                             <div class="feature-body">
                                 <p>24 hours <br> treat</p>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="col-lg-3 d-flex justify-content-center">
                             <div class="feature-img">
-                                <img src="../asset/logo2.jpg" style="border-radius: 50%; width: 4rem;" alt="">
+                                <img src="./asset/logo2.jpg" style="border-radius: 50%; width: 4rem;" alt="">
                             </div>
                             <div class="feature-body">
                                 <p>Mobile <br> chat</p>
@@ -85,7 +85,7 @@
                         </div>
                         <div class="col-lg-3 d-flex justify-content-center">
                             <div class="feature-img">
-                                <img src="../asset/l1img3.jpg" style="border-radius: 50%; width: 4rem;" alt="">
+                                <img src="./asset/l1img3.jpg" style="border-radius: 50%; width: 4rem;" alt="">
                             </div>
                             <div class="feature-body">
                                 <p>Wear <br> Mask</p>
@@ -119,7 +119,7 @@
             </div>
             <div class="col-sm-4 mt-1">
                 <div class="image">
-                    <img src="../asset/Doctor.jpg" alt="Doctor">
+                    <img src="./asset/Doctor.jpg" alt="Doctor">
                 </div>
                 <div class="info-bar">
                     <p class="services">Our Services</p>
@@ -137,13 +137,13 @@
                         <p class="Title">Lorem Impsum</p>
                         <p class="description">This is some description</p>
                     </div>
-                    <img src="../asset/QR_code_for_mobile_English_Wikipedia.svg.webp" alt="this is qr code">
+                    <img src="./asset/QR_code_for_mobile_English_Wikipedia.svg.webp" alt="this is qr code">
                 </div>
             </div>
         </div>
     </main>
-    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script><!-- Bootstrap - 4 js file -->
-    <script src="../bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap - 4 js file-->
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script><!-- Bootstrap - 4 js file -->
+    <script src="./bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap - 4 js file-->
 </body>
 
 </html>
