--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                             </p>
                         </a>
                         <div class="d-flex ">
-                            <a href="https://twitter.com/RaoInfoTech"><img src="../asset/twitter.png"
+                            <a href="https://twitter.com/RaoInfoTech"><img src="./asset/twitter.png"
                                     alt="twitter image"></a>
                             <a href="https://www.instagram.com/raoinfotechofficial/?hl=en"><img
-                                    src="../asset/instagram.png" alt="instagram image"></a>
+                                    src="./asset/instagram.png" alt="instagram image"></a>
                             <a href="https://www.facebook.com/raoinformationtechnology/"><img
-                                    src="../asset/facebook.png" alt="facebook image"></a>
+                                    src="./asset/facebook.png" alt="facebook image"></a>
                         </div>
                     </div>
                 </div>
